--- a/css/style.css
+++ b/css/style.css
@@ -1425,8 +1425,8 @@ header a.logo img {
 }
 
 .circle:hover , .circle:hover i {
-    color: #ffd700;
-    border-color: #ffd700;
+    color: #00a2ff;
+    border-color: #00a2ff;
 }
 
 #team-circle-right {
